test/library/standard/CTypes/carray-nothing.good
carray-nothing.chpl:3: error: c_array element type cannot be 'nothing'
