test/library/standard/CTypes/carray-nothing.chpl
use CTypes;

var arr: c_array(nothing, 5);
writeln(arr);
